Prevent horizontal scroll

--- a/css/style.css
+++ b/css/style.css
@@ -14450,6 +14450,15 @@ body {
     }
 }
 
+/* <-- Prevent horizontal scroll --> */
+html, body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  overflow-x: hidden;  /* left-right movement remove */
+}
+
+
 
 
 
